# symphony-of-empires

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  PACMAN.txt  README.md  SoE.sln  buildall.bat  client.vcxproj  client.vcxproj.filters  conanfile.txt  hello_world.v0  out.txt  pack_win.bat  packages.config  quick_build.sh  run_game.bat  run_server.bat  server.vcxproj  server.vcxproj.filters  vcpkg.json  windows_build.bat
dependencies/: CMakeLists.txt
dependencies/GLEW/: CMakeLists.txt
dependencies/LUA/: CMakeLists.txt
dependencies/OpenGL/: CMakeLists.txt
dependencies/SDL2/: CMakeLists.txt
dependencies/SDL2_mixer/: CMakeLists.txt
dependencies/SDL2_ttf/: CMakeLists.txt
dependencies/assimp/: CMakeLists.txt
dependencies/boost/: CMakeLists.txt
dependencies/eventpp/: CMakeLists.txt
dependencies/glm/: CMakeLists.txt
dependencies/gtest/: CMakeLists.txt
dependencies/tbb/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
eng3d/: CMakeLists.txt  README.1st  eng3d
eng3d/eng3d/: CMakeLists.txt  audio.cpp  audio.hpp  binary_image.cpp  binary_image.hpp  borders.cpp  borders.hpp  camera.hpp  color.hpp  compress.hpp  curve.cpp  curve.hpp  disc_dist.hpp  entity.hpp  event.cpp  event.hpp  font_sdf.cpp  font_sdf.hpp  framebuffer.cpp  framebuffer.hpp  freelist.hpp  glsl_trans.cpp  glsl_trans.hpp  heap_ext.cpp  interface.cpp  interface.hpp  io.cpp  io.hpp  log.cpp  log.hpp  luavm.cpp  luavm.hpp  manager.hpp  map.cpp  map.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  (+32 more)
eng3d/eng3d/src/: audio.cpp  binary_image.cpp  color.cpp  compress.cpp  curve.cpp  event.cpp  font_sdf.cpp  framebuffer.cpp  glsl_trans.cpp  heap_ext.cpp  io.cpp  locale.cpp  log.cpp  material.cpp  model.cpp  network.cpp  path.cpp  primitive.cpp  print.cpp  profiler.cpp  rectangle.cpp  serializer.cpp  shader.cpp  state.cpp  string.cpp  texture.cpp  thread_pool.cpp
eng3d/eng3d/ui/: barchart.cpp  candle.cpp  candle.hpp  chart.cpp  checkbox.cpp  checkbox.hpp  close_button.cpp  close_button.hpp  components.hpp  group.hpp  image.cpp  image.hpp  input.cpp  input.hpp  label.cpp  label.hpp  numeric_input.cpp  numeric_input.hpp  numeric_label.cpp  numeric_label.hpp  piechart.cpp  piechart.hpp  progress_bar.cpp  scrollbar.cpp  scrollbar.hpp  slider.hpp  table.cpp  table.hpp  text.cpp  text.hpp  tooltip.cpp  tooltip.hpp  ui.cpp  ui.hpp  waffle.cpp  waffle.hpp  widget.cpp  widget.hpp  window.cpp
eng3d/faketbb/tbb/: blocked_range.hpp  combinable.hpp  concurrent_vector.hpp  parallel_for.hpp
eng3d/src/: audio.cpp  audio.hpp  binary_image.cpp  binary_image.hpp  borders.cpp  borders.hpp  camera.hpp  color.hpp  common.hpp  compress.hpp  curve.cpp  curve.hpp  disc_dist.hpp  entity.hpp  event.cpp  event.hpp  flat_camera.hpp  font_sdf.cpp  font_sdf.hpp  framebuffer.cpp  framebuffer.hpp  freelist.hpp  glsl_trans.cpp  glsl_trans.hpp  heap_ext.cpp  heap_ext.hpp  interface.cpp  interface.hpp  io.cpp  io.hpp  locale.cpp  locale.hpp  log.cpp  log.hpp  luavm.cpp  luavm.hpp  main.cpp  manager.hpp  map.cpp  map.hpp  (+41 more)
eng3d/src/ui/: barchart.cpp  barchart.hpp  button.cpp  button.hpp  candle.hpp  chart.cpp  chart.hpp  checkbox.cpp  checkbox.hpp  close_button.cpp  close_button.hpp  components.hpp  div.cpp  div.hpp  group.cpp  group.hpp  image.cpp  image.hpp  input.cpp  input.hpp  label.cpp  label.hpp  numeric_input.cpp  numeric_input.hpp  piechart.cpp  piechart.hpp  progress_bar.cpp  progress_bar.hpp  scrollbar.cpp  scrollbar.hpp  slider.cpp  slider.hpp  table.cpp  table.hpp  text.cpp  text.hpp  tooltip.cpp  tooltip.hpp  ui.cpp  ui.hpp  (+6 more)
eng3d/tests/: archive.cpp  cfggen.cpp  cppgen.cpp  pyscript.cpp  triangle.cpp
game/: AndroidManifest.xml  CMakeLists.txt  README.1st
game/src/: action.cpp  action.hpp  building.cpp  building.hpp  culture.hpp  diplomacy.cpp  diplomacy.hpp  disc_dist.cpp  disc_dist.hpp  event.cpp  event.hpp  good.hpp  ideology.hpp  indpobj.hpp  io_impl.hpp  language.hpp  nation.cpp  nation.hpp  objects.hpp  pathfinding.cpp  pathfinding.hpp  policy.hpp  pop.cpp  pop.hpp  product.cpp  product.hpp  province.cpp  province.hpp  religion.cpp  religion.hpp  technology.hpp  terrain.hpp  tutorial.cpp  tutorial.hpp  unit.cpp  unit.hpp  world.cpp  world.hpp
game/src/client/: borders.cpp  borders.hpp  camera.hpp  client_network.cpp  client_network.hpp  flat_camera.hpp  game_state.cpp  game_state.hpp  lua_save_util.cpp  lua_save_util.hpp  main.cpp  map.cpp  map.hpp  map_render.cpp  map_render.hpp  orbit_camera.hpp  pathfinding.cpp  pathfinding.hpp  rivers.cpp  rivers.hpp  value_chase.hpp
game/src/global_trade/: global_trade_graph.cpp  global_trade_graph.hpp  test_simulation.cpp
game/src/server/: ai.cpp  ai.hpp  economy.cpp  economy.hpp  emigration.cpp  emigration.hpp  export_util.cpp  export_util.hpp  lua_api.cpp  lua_api.hpp  server_network.cpp  server_network.hpp  trade.cpp  trade.hpp
unified_render/: CMakeLists.txt  README.1st
unified_render/include/unified_render/: audio.hpp  byteswap.hpp  color.hpp  common.hpp  curve.hpp  decimal.hpp  entity.hpp  event.hpp  font_sdf.hpp  framebuffer.hpp  glsl_trans.hpp  heap_ext.hpp  io.hpp  locale.hpp  material.hpp  mesh.hpp  model.hpp  network.hpp  path.hpp  primitive.hpp  profiler.hpp  rand.hpp  rectangle.hpp  serializer.hpp  shader.hpp  sound.hpp  state.hpp  string_format.hpp  texture.hpp  texture_save.hpp
unified_render/src/: audio.cpp  binary_image.cpp  color.cpp  compress.cpp  curve.cpp  event.cpp  font_sdf.cpp  framebuffer.cpp  glsl_trans.cpp  heap_ext.cpp  io.cpp  log.cpp  material.cpp  model.cpp  network.cpp  path.cpp  primitive.cpp  print.cpp  profiler.cpp  rectangle.cpp  shader.cpp  shader.hpp  sound.cpp  state.cpp  texture.cpp  thread_pool.cpp
unified_render/src/ui/: button.cpp  chart.cpp  checkbox.cpp  close_button.cpp  div.cpp  group.cpp  image.cpp  input.cpp  label.cpp  numeric_input.cpp  piechart.cpp  progress_bar.cpp  scrollbar.cpp  text.cpp  tooltip.cpp  ui.cpp  widget.cpp  window.cpp
unified_render/unified_render/: CMakeLists.txt
unified_render/unified_render/src/: audio.cpp  (+18 more)
(+915 files in other folders)
